--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
   },
   "homepage": "https://github.com/Gnom204/express-mesto-gha#readme",
   "devDependencies": {
-    "eslint": "^8.40.0",
+    "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint-plugin-import": "^2.27.5"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
